--- a/src/assets/style/content.scss
+++ b/src/assets/style/content.scss
@@ -1,24 +1,34 @@
+@import "./content/about.scss";
+@import "./content/skills.scss";
+
 .inner-section {
   height: 100%;
   width: 70%;
   margin: 0 auto;
   font-size: 2rem;
-}
-.bg-green {
-  background-color: $lightGreen;
-}
-
-.about-section {
-  padding-top: 10%;
-  text-align: left;
+  z-index: 15;
 
   h1 {
     font-size: 3em;
   }
-  h3 {
-    font-size: 2em;
-    border-left: 5px solid rgba($darkGreen, 0.7);
-    color: $darkGreen;
-    padding-left: 1.5rem;
+}
+
+@media (min-width: $breakpoint-mobileS) {
+  .inner-section {
+    height: 100%;
+    width: 90%;
+    margin: 0 auto;
+    font-size: 1.5rem;
+    z-index: 15;
+  }
+}
+
+@media (min-width: $breakpoint-laptop) {
+  .inner-section {
+    height: 100%;
+    width: 90%;
+    margin: 0 auto;
+    font-size: 2rem;
+    z-index: 15;
   }
 }
